<?xml version="1.0"?>
<package>
  <name>aruco_mapping_filter</name>
  <version>1.0.0</version>
  <description>Additional filter for aruco_mapping package </description>

  <maintainer email="janbacik@smartroboticsys.eu">Jan Bacik</maintainer>
  <license>BSD</license>
  <url type="website">http://www.smartroboticsys.eu/</url>
  <author email="jan.bacik@smartroboticsys.eu">Jan Bacik</author>  
  
  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>OpenCV</run_depend>

</package>
